--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,300&family=Satisfy&display=swap" rel="stylesheet">
     <title>WichPress Food Truck</title>
   </head>
   <body>
