--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" class="perfect-scrollbar-off nav-open">
   <head>
+    
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -20,6 +21,7 @@
 <meta name="theme-color" content="#ffffff">
     <link rel="manifest" href="./manifest.json" />
    
+
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
@@ -28,7 +30,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Open+Sans:ital,wght@1,300&family=Satisfy&display=swap" rel="stylesheet">
-    <title>WichPress Food Truck</title>
+   
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-22M91VJZ4V"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-22M91VJZ4V');
+    </script>
+<title>WichPress Food Truck</title>
+<meta name="ahrefs-site-verification" content="52a0eb076e475decd92497e3ead8cb5323391edddb2bd501a7ed5a435d544a8c">
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
